# cppwebserver

./: .gitignore  README.md
serverfiles/: CMakeLists.txt  Makefile  amk-buildserver.sh  areg-buildserver.sh  compile_commands.json  gdb_breakpoints  main.cpp  runner  todo.md
serverfiles/include/: amk_socket.h  file.h  mysocket.h  parser.h  request.h  request_handler.h  request_parser.h  response.h  server.h  threadPool.h  thread_pool.h  utils.h
serverfiles/src/: CMakeLists.txt  Server.cpp  Server.h  Socket.cpp  Socket.h  amk_socket.cpp  consts.h  file.cpp  main.cpp  mysocket.cpp  parser.cpp  parser.h  request.cpp  request_handler.cpp  request_parser.cpp  response.cpp  server.cpp  test  test.cpp  threadPool.cpp  thread_pool.cpp  thread_pool.h  utils.cpp
serverfiles/test/: exact.txt  long.txt
